# Parallel-Programming

./: .gitignore
lab1/: Readme.md  Report.md
lab1/src/: Makefile  array1.c  array2.c
lab2/: Readme.md
lab2/src/: Makefile  array1.c  home_work.c  lab_work.c  test.c  test.cpp
lab2cmake/: CMakeLists.txt
lab2cmake/src/: home_work.c  lab_work.c
lab3cmake/: CMakeLists.txt
lab3cmake/src/: calc.cpp  diff_equation.h  init.cpp  main.cpp
lab4cmake/: CMakeLists.txt
lab4cmake/src/: common.cpp  common.hpp
lab4cmake/src/parallel/: main.cpp
lab4cmake/src/serial/: main.cpp
lab5cmake/: CMakeLists.txt
lab5cmake/src/: common.cpp  common.hpp
lab5cmake/src/parallel/: main.cpp
lab5cmake/src/serial/: main.cpp
